# simpervisor

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  README.rst  RELEASE.md  dev-requirements.txt  pyproject.toml  setup.py  simperviser.py  simpervisor.py  test_simperviser.py  test_simpervisor.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yaml
.github/workflows/: release.yaml  test.yaml
simpervisor/: __init__.py  _version.py  atexitasync.py  process.py
tests/: test_atexitasync.py  test_ready.py  test_signals.py  test_simpervisor.py
tests/child_scripts/: signalprinter.py  signalsupervisor.py  simplehttpserver.py
